Fixed white background flicker

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -22,8 +22,6 @@ body {
 
   display: flex;
   flex-direction: column;
-  visibility: hidden;
-
   @extend %font-ssp;
 }
 
